force-app/main/default/objects/AI_Prompt__mdt/AI_Prompt__mdt.object-meta.xml
<CustomObject>
    <description>Stores prompt templates for Claude AI</description>
    <label>AI Prompt</label>
    <pluralLabel>AI Prompts</pluralLabel>
</CustomObject>