force-app/main/default/objects/AI_Prompt__mdt/fields/Agent_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_Type__c</fullName>
    <label>Agent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flint</fullName>
                <default>true</default>
                <label>Flint</label>
            </value>
            <value>
                <fullName>Blakeney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>