force-app/main/default/objects/AI_Prompt__mdt/fields/AI_Provider__c.field-meta.xml
<CustomField>
    <fullName>AI_Provider__c</fullName>
    <label>AI Provider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
                <default>true</default>
                <label>Any</label>
            </value>
            <value>
                <fullName>OpenAI</fullName>
            </value>
            <value>
                <fullName>Anthropic_Claude</fullName>
            </value>
            <value>
                <fullName>Google_Gemini</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>