force-app/main/default/objects/AI_Prompt__mdt/fields/Assistant_Name__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Name__c</fullName>
    <label>Assistant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>