force-app/main/default/objects/AI_Prompt__mdt/fields/Context_Fields__c.field-meta.xml
<CustomField>
    <fullName>Context_Fields__c</fullName>
    <description>Which Contact fields to include</description>
    <label>Context Fields</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>