force-app/main/default/objects/AI_Prompt__mdt/fields/Conversation_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Type__c</fullName>
    <label>Conversation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>