force-app/main/default/objects/AI_Prompt__mdt/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>When created</description>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>