force-app/main/default/objects/AI_Prompt__mdt/fields/History_Message_Count__c.field-meta.xml
<CustomField>
    <fullName>History_Message_Count__c</fullName>
    <description>How many messages to include</description>
    <label>History Message Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>