force-app/main/default/objects/AI_Prompt__mdt/fields/Include_History__c.field-meta.xml
<CustomField>
    <fullName>Include_History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include conversation history</description>
    <label>Include History</label>
    <type>Checkbox</type>
</CustomField>