force-app/main/default/objects/AI_Prompt__mdt/fields/Journey_Stage__c.field-meta.xml
<CustomField>
    <fullName>Journey_Stage__c</fullName>
    <description>Associated journey stage</description>
    <label>Journey Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>