force-app/main/default/objects/AI_Prompt__mdt/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <description>When last changed</description>
    <label>Last Modified Date</label>
    <type>Date</type>
</CustomField>