force-app/main/default/objects/AI_Prompt__mdt/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>e.g., gpt-4o, claude-3-opus</description>
    <label>Preferred Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>