force-app/main/default/objects/AI_Prompt__mdt/fields/Output_Schema__c.field-meta.xml
<CustomField>
    <fullName>Output_Schema__c</fullName>
    <description>Expected JSON output structure</description>
    <label>Output Schema (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>