force-app/main/default/objects/AI_Prompt__mdt/fields/Prompt_Category__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job_Intake</fullName>
                <default>true</default>
                <label>Job_Intake</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Salary_Recommendation</fullName>
            </value>
            <value>
                <fullName>Culture_Capture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>