force-app/main/default/objects/AI_Prompt__mdt/fields/Prompt_Template__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Template__c</fullName>
    <description>Full prompt with {{placeholders}}</description>
    <label>Prompt Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>