force-app/main/default/objects/AI_Prompt__mdt/fields/Prompt_Type__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Type__c</fullName>
    <label>Prompt Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CV_Parse</fullName>
                <default>true</default>
                <label>CV_Parse</label>
            </value>
            <value>
                <fullName>CV_Match</fullName>
            </value>
            <value>
                <fullName>Job_Match</fullName>
            </value>
            <value>
                <fullName>Skill_Extract</fullName>
            </value>
            <value>
                <fullName>Summary_Generate</fullName>
            </value>
            <value>
                <fullName>Cover_Letter</fullName>
            </value>
            <value>
                <fullName>Interview_Questions</fullName>
            </value>
            <value>
                <fullName>- Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>