force-app/main/default/objects/AI_Prompt__mdt/fields/Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Success_Rate__c</fullName>
    <description>Tracked success rate (updated periodically)</description>
    <label>Success Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>