force-app/main/default/objects/AI_Prompt__mdt/fields/System_Instructions__c.field-meta.xml
<CustomField>
    <fullName>System_Instructions__c</fullName>
    <description>Additional system context</description>
    <label>System Instructions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>