force-app/main/default/objects/AI_Prompt__mdt/fields/System_Prompt__c.field-meta.xml
<CustomField>
    <fullName>System_Prompt__c</fullName>
    <description>System/role prompt for the AI</description>
    <label>System Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>