force-app/main/default/objects/AI_Prompt__mdt/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <description>AI creativity (0.0-1.0)</description>
    <label>Temperature</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>