force-app/main/default/objects/AI_Prompt__mdt/fields/Top_P__c.field-meta.xml
<CustomField>
    <fullName>Top_P__c</fullName>
    <description>Nucleus sampling</description>
    <label>Top P</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>