force-app/main/default/objects/AI_Prompt__mdt/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <description>When to use this prompt</description>
    <label>Use Case</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>