force-app/main/default/objects/AI_Prompt__mdt/fields/User_Prompt_Template__c.field-meta.xml
<CustomField>
    <fullName>User_Prompt_Template__c</fullName>
    <description>Main prompt template with {placeholders} Supported placeholders: {CV_TEXT}, {JOB_DESCRIPTION}, {SKILLS_LIST}, 
{CANDIDATE_NAME}, {COMPANY_NAME}, etc.</description>
    <label>User Prompt Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>